--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Green Day Quiz</title>
 </head>
 <body>
-    <script> src="assets/js/script.js" </script>
+    <div class="app">
+    <h1>Green Day Quiz</h1>
+    <div class="quiz"></div>
+      <h2 id="question">Questions</h2>
+      <div id="answer-buttons"></div>
+        <button class="btn">Answer1</button>
+        <button class="btn">Answer2</button>
+        <button class="btn">Answer3</button>
+        <button class="btn">Answer4</button>
+    
 </body>
 </html>
